# normalizffi

./: .gitignore  .gitmodules  Makefile  README.md  dune  dune-project  normalizffi.install  normalizffi.opam
Normaliz-offline/: .gitignore  configure.ac  install_normaliz.sh  install_normaliz_with_flint.sh  install_normaliz_with_opt.sh  test.cpp
Normaliz-offline/install_scripts_opt/: common.sh  install_nmz_antic.sh  install_nmz_arb.sh  install_nmz_cocoa.sh  install_nmz_e-antic.sh  install_nmz_flint.sh  install_nmz_mpfr.sh  install_nmz_nauty.sh
Normaliz-offline/nmz_opt_lib/ANTIC_source/antic-0.2.4/: Makefile  libantic.so.0  libantic.so.0.2.4
Normaliz-offline/nmz_opt_lib/CoCoA_source/CoCoALib-0.99710/: Makefile  configure
Normaliz-offline/nmz_opt_lib/CoCoA_source/CoCoALib-0.99710/configuration/: autoconf.mk  boost-find-hdrs.sh  cddlib-version.sh  cxx-version.sh  cxx14.sh  gmp-version-from-hdr.sh  last-config-cmd  version
Normaliz-offline/nmz_opt_lib/CoCoA_source/CoCoALib-0.99710/doc/: CoCoALib-CompletedTasks.html  Makefile
Normaliz-offline/nmz_opt_lib/CoCoA_source/CoCoALib-0.99710/doc/aux-txt2tags/: DocTeX.t2t  index-alpha.html  index.html
Normaliz-offline/nmz_opt_lib/CoCoA_source/CoCoALib-0.99710/doc/doxygen/: Makefile
Normaliz-offline/nmz_opt_lib/CoCoA_source/CoCoALib-0.99710/doc/html/: 00CodingConventions.html  00INTRODUCTION.html  BigIntOps.html  BigRatInterval.html  BigRatOps.html  CpuTimeLimit.html  DenseMatrix.html  DistrMPolyClean.html  ExternalLibs-GFan.html  ExternalLibs-Normaliz.html  INSTALL.html  MachineInt.html  MatrixForOrdering.html  MatrixOps.html  MatrixSpecial.html  NumTheory.html  OrthogonalPolys.html  PPMonoid.html  PPOrdering.html  PPVector.html  PolyRing.html  QuotientRing.html  RingDistrMPolyClean.html  RingElem.html  RingElemInput.html  RingHom.html  RingWeyl.html  SparsePolyOps-resultant.html  SparsePolyRing.html  ToString.html  bool3.html  combinatorics.html  convert.html  ideal.html  index-alpha.html  index.html  matrix.html  random.html  time.html  utils.html
Normaliz-offline/nmz_opt_lib/CoCoA_source/CoCoALib-0.99710/doc/txt/: 00CodingConventions.txt  00INTRODUCTION.txt  BigIntOps.txt  BigRatOps.txt  CpuTimeLimit.txt  DenseMatrix.txt  DistrMPolyClean.txt  ExternalLibs-Normaliz.txt  INSTALL.txt  MachineInt.txt  MatrixForOrdering.txt  MatrixOps.txt  NumTheory.txt  PPMonoid.txt  PPOrdering.txt  PolyRing.txt  RingDistrMPolyClean.txt  RingElem.txt  RingElemInput.txt  RingHom.txt  SparsePolyOps-resultant.txt  SparsePolyRing.txt  ToString.txt  bool3.txt  convert.txt  ideal.txt  matrix.txt  random.txt  time.txt  utils.txt
Normaliz-offline/nmz_opt_lib/CoCoA_source/CoCoALib-0.99710/examples/: Makefile  Makefile-indexhtml  ex-AlexanderDual.C  ex-CoprimeFactorBasis1.C  ex-CpuTimeLimit1.C  ex-CpuTimeLimit2.C  ex-IdealOfPoints1.C  ex-IntegrationUIBCToSparsePolyRing.C  ex-Janet2.C  ex-MVT-Simplicial.C  ex-NumTheory3.C  ex-OrthogPolys1.C  ex-PPMonoidElem2.C  ex-PPVector1.C  ex-PolyInput1.C  ex-PolyInput2.C  ex-PolyIterator2.C  ex-PolyRing1.C  ex-PolyRing2.C  ex-PolyRing3.C  ex-PolyRing4.C  ex-Pommaret1.C  ex-Pommaret2.C  ex-QuotientBasis.C  ex-RingFq1.C  ex-RingHom1.C  ex-RingHom2.C  ex-RingHom3.C  ex-RingHom4.C  ex-RingHom5.C  ex-RingHom6.C  ex-RootBound1.C  ex-ToString1.C  ex-bool3.C  ex-c++-fn-defn.C  ex-c++-for-loop.C  ex-c++-vector.C  ex-c++-vector2.C  ex-c++.C  ex-empty.C  (+9 more)
Normaliz-offline/nmz_opt_lib/CoCoA_source/CoCoALib-0.99710/include/CoCoA/: BenchmarkToolkit.H  BigIntOps.H  BigRatOps.H  CpuTimeLimit.H  DenseMatrix.H  DenseUPolyRing.H  DistrMPolyClean.H  DistrMPolyInlFpPP.H  DistrMPolyInlPP.H  ExternalLibs-Frobby.H  ExternalLibs-GFan.H  FGModule.H  FractionField.H  FreeModule.H  GlobalManager.H  LinDepMill.H  MakeUnifiedHeader.sh  MatrixForOrdering.H  MatrixOps.H  MatrixSpecial.H  MemPool.H  NumTheory-CRT.H  NumTheory-ContFrac.H  NumTheory-CoprimeFactorBasis.H  (+49 more)
Normaliz-offline/nmz_opt_lib/CoCoA_source/CoCoALib-0.99710/src/: Makefile
Normaliz-offline/nmz_opt_lib/E-ANTIC_source/e-antic-1.0.3/: Makefile.in  configure
Normaliz-offline/nmz_opt_lib/E-ANTIC_source/e-antic-1.0.3/doc/: Makefile.in  aclocal.m4  config.sub  configure
Normaliz-offline/nmz_opt_lib/E-ANTIC_source/e-antic-1.0.3/libeantic/: Makefile  Makefile.in  aclocal.m4  config.guess  config.status  configure  libtool
Normaliz-offline/nmz_opt_lib/E-ANTIC_source/e-antic-1.0.3/pyeantic/: Makefile.in  aclocal.m4  configure
Normaliz-offline/nmz_opt_lib/Flint_source/flint-2.8.0/: Makefile  libflint.so.16
Normaliz-offline/nmz_opt_lib/MPFR_source/mpfr-4.1.0/: Makefile  config.status  libtool  mpfr.pc
Normaliz-offline/nmz_opt_lib/MPFR_source/mpfr-4.1.0/doc/: Makefile
Normaliz-offline/nmz_opt_lib/MPFR_source/mpfr-4.1.0/src/: Makefile
Normaliz-offline/nmz_opt_lib/MPFR_source/mpfr-4.1.0/tests/: Makefile
Normaliz-offline/nmz_opt_lib/MPFR_source/mpfr-4.1.0/tune/: Makefile
Normaliz-offline/nmz_opt_lib/Nauty_source/nauty27r2/: NRswitchg  addedgeg  amtog  assembleg  biplabg  catg  complg  config.status  converseg  copyg  cubhamg  deledgeg  delptg  directg  dreadnaut  dretodot  dretog  edgetransg  genbg  genbgL  geng  gengL  genquarticg  genrang  genspecialg  gentourng  gentreeg  hamheuristic  labelg  linegraphg  listg  makefile  makefile.basic  makefile.in  multig  nbrhoodg  newedgeg  pickg  planarg  ranlabg  (+7 more)
Normaliz-offline/playground/: A553_scale_2.in
Normaliz-offline/test/test-LARGE/: cyclicpolytope30-15.ref
Normaliz-offline/test/test-mrk/: Kwak10.in
Normaliz-patch/: .gitignore  downloadall.sh  normaliz.gitignore  patch-offline.sh
Normaliz-patch/install_scripts_opt/: common.sh  install_nmz_antic.sh  install_nmz_arb.sh  install_nmz_e-antic.sh  install_nmz_flint.sh  install_nmz_mpfr.sh  install_nmz_nauty.sh
src/: custom_memory.cpp  custom_memory.h  ffiLib.ml  ffiLib.mli  flint.ml  flint.mli  flint_stub.cpp  flint_stub.h  function_description.ml  normaliz.ml  normaliz.mli  normaliz_stub.cpp  normaliz_stub.h  normalizffi.ml  stub_common.h  type_description.ml  wrappedPointer.ml  wrappedPointer.mli
test/: test.ml
test_stubs/: Makefile  stub_common.h  test_stubs.cpp
(+296 files in other folders)
