(data_only_dirs Normaliz Normaliz-offline)
(include_subdirs unqualified)

(library
  (name	normalizffi)
  (public_name normalizffi)
  (libraries ctypes.foreign gmp)
  (foreign_archives normaliz_stubs flint normaliz nauty)
  (c_library_flags (-lstdc++ -lgmpxx -lgmp -lgomp -lnormaliz -lflint -lnauty)))

(foreign_library
  (archive_name normaliz_stubs)
  (language cxx)
  (names normaliz_stub flint_stub)
  (include_dirs ./Normaliz-offline/local/include))

(rule
  (deps (source_tree Normaliz-offline))
  (targets dllnormaliz.so libnormaliz.a dllflint.so libflint.a dllnauty.so libnauty.a)
  (action
    (no-infer
      (progn
	(chdir Normaliz-offline/local/lib (run %{env:CC=gcc} -shared -fPIC -o dllnauty.so -L. -lnauty))
        (copy Normaliz-offline/local/lib/libnormaliz.so dllnormaliz.so)
        (copy Normaliz-offline/local/lib/libnormaliz.a libnormaliz.a)
        (copy Normaliz-offline/local/lib/libflint.so dllflint.so)
        (copy Normaliz-offline/local/lib/libflint.a libflint.a)
        (copy Normaliz-offline/local/lib/dllnauty.so dllnauty.so)
        (copy Normaliz-offline/local/lib/libnauty.a libnauty.a)))))